feat: support Java 17 through 26
Lower the published baseline to Java 17, retain JPQL behavior, and verify builds plus the Nova H2 example on JDK 17, 21, 25, and 26.